@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.prl.services.reviewdocument;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import org.instancio.Instancio;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Ignore;
@@ -46,6 +47,7 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.ServiceOfApplication;
 import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
 import uk.gov.hmcts.reform.prl.services.BulkPrintService;
 import uk.gov.hmcts.reform.prl.services.DgsService;
+import uk.gov.hmcts.reform.prl.services.DocumentCategoryService;
 import uk.gov.hmcts.reform.prl.services.DocumentLanguageService;
 import uk.gov.hmcts.reform.prl.services.EmailService;
 import uk.gov.hmcts.reform.prl.services.SendgridService;
@@ -66,6 +68,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+import static org.junit.Assert.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyList;
@@ -80,6 +83,7 @@ import static org.mockito.Mockito.when;
 import static org.springframework.http.MediaType.APPLICATION_PDF_VALUE;
 import static uk.gov.hmcts.reform.prl.constants.ManageDocumentsCategoryConstants.RESPONDENT_APPLICATION;
 import static uk.gov.hmcts.reform.prl.constants.ManageDocumentsCategoryConstants.RESPONDENT_C1A_APPLICATION;
+import static uk.gov.hmcts.reform.prl.constants.ManageDocumentsCategoryConstants.SIXTEEN_A_RISK_ASSESSMENT;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN;
@@ -91,14 +95,17 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.RESTRICTED_DOCU
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_MULTIPART_FILE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TEST_UUID;
 import static uk.gov.hmcts.reform.prl.enums.managedocuments.DocumentPartyEnum.CAFCASS_CYMRU;
+import static uk.gov.hmcts.reform.prl.services.cafcass.CafcassUploadDocService.DOC_TYPE_CIR_EXTENSION;
+import static uk.gov.hmcts.reform.prl.services.cafcass.CafcassUploadDocService.DOC_TYPE_CIR_TRANSFER;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @RunWith(MockitoJUnitRunner.Silent.class)
 @SuppressWarnings({"java:S1607"})
 public class ReviewDocumentServiceTest {
 
-    public static final String DOCUMENT_SUCCESSFULLY_REVIEWED = "# Document successfully reviewed";
-    public static final String DOCUMENT_IN_REVIEW = "# Document review in progress";
+    private static final String AUTHORISATION = "authorisation";
+    private static final String DOCUMENT_SUCCESSFULLY_REVIEWED = "# Document successfully reviewed";
+    private static final String DOCUMENT_IN_REVIEW = "# Document review in progress";
     private static final String REVIEW_YES = "### You have successfully reviewed this document"
         + System.lineSeparator()
         + "This document can only be seen by court staff and the judiciary. "
@@ -125,26 +132,26 @@ public class ReviewDocumentServiceTest {
     private final UUID testUuid = UUID.fromString(TEST_UUID);
 
     @InjectMocks
-    ReviewDocumentService reviewDocumentService;
+    private ReviewDocumentService reviewDocumentService;
 
     @Mock
-    AuthTokenGenerator authTokenGenerator;
+    private AuthTokenGenerator authTokenGenerator;
     @Mock
-    SystemUserService systemUserService;
+    private SystemUserService systemUserService;
     @Mock
-    CaseDocumentClient caseDocumentClient;
+    private CaseDocumentClient caseDocumentClient;
 
     @Mock
-    AllTabsService allTabsService;
+    private AllTabsService allTabsService;
 
     @Mock
-    AllTabServiceImpl allTabServiceImpl;
+    private AllTabServiceImpl allTabServiceImpl;
 
     @Mock
-    ManageDocumentsService manageDocumentsService;
+    private ManageDocumentsService manageDocumentsService;
 
     @Mock
-    ObjectMapper objectMapper;
+    private ObjectMapper objectMapper;
 
     @Mock
     private EmailService emailService;
@@ -169,22 +176,25 @@ public class ReviewDocumentServiceTest {
     @Mock
     private NotificationService notificationService;
 
+    @Mock
+    private DocumentCategoryService documentCategoryService;
+
     private final String authorization = "authToken";
-    Element element;
-    Document document;
-    QuarantineLegalDoc quarantineLegalDoc;
+    private Element element;
+    private Document document;
+    private QuarantineLegalDoc quarantineLegalDoc;
     private String authToken;
     private String s2sToken;
 
-    Document caseDoc;
+    private Document caseDoc;
 
-    Document confidentialDoc;
+    private Document confidentialDoc;
 
-    QuarantineLegalDoc quarantineConfidentialDoc;
+    private QuarantineLegalDoc quarantineConfidentialDoc;
 
-    QuarantineLegalDoc quarantineCaseDoc;
+    private QuarantineLegalDoc quarantineCaseDoc;
 
-    QuarantineLegalDoc bulkScanQuarantineDoc;
+    private QuarantineLegalDoc bulkScanQuarantineDoc;
 
     @Before
     public void init() {
@@ -302,7 +312,7 @@ public class ReviewDocumentServiceTest {
         doNothing().when(notificationService).sendNotifications(any(CaseData.class), any(QuarantineLegalDoc.class), anyString());
     }
 
-    private static uk.gov.hmcts.reform.ccd.document.am.model.Document testDocument() {
+    private uk.gov.hmcts.reform.ccd.document.am.model.Document testDocument() {
         uk.gov.hmcts.reform.ccd.document.am.model.Document.Link binaryLink = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
         binaryLink.href = "http://test.link";
         uk.gov.hmcts.reform.ccd.document.am.model.Document.Link selfLink = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
@@ -312,16 +322,29 @@ public class ReviewDocumentServiceTest {
         links.binary = binaryLink;
         links.self = selfLink;
 
-        uk.gov.hmcts.reform.ccd.document.am.model.Document document = uk.gov.hmcts.reform.ccd.document.am.model.Document.builder().build();
-        document.links = links;
-        document.originalDocumentName = "Confidential_test.pdf";
-        return document;
+        uk.gov.hmcts.reform.ccd.document.am.model.Document doc = uk.gov.hmcts.reform.ccd.document.am.model.Document.builder().build();
+        doc.links = links;
+        doc.originalDocumentName = "Confidential_test.pdf";
+        return doc;
+    }
+
+
+    @Test
+    public void testValidateEvent() {
+        // given
+        Map<String, Object> caseDataUpdated = Map.of("documentNewName", "123.pdf");
+
+        // when
+        List<String> result = reviewDocumentService.validateEvent(caseDataUpdated);
+
+        // then
+        assertNotNull(result);
+
     }
 
 
     @Test
     public void testReviewDocumentListIsNotEmptyWhenDocumentArePresentLegalProfQuarantineDocsList() {
-        HashMap<String, Object> caseDataUpdated = new HashMap<>();
         CaseData caseData = CaseData.builder()
             .documentManagementDetails(DocumentManagementDetails.builder()
                                            .legalProfQuarantineDocsList(List.of(element(QuarantineLegalDoc.builder().uploaderRole(
@@ -339,7 +362,6 @@ public class ReviewDocumentServiceTest {
 
     @Test
     public void testReviewDocumentListIsNotEmptyWhenDocumentArePresentForCafcassQuarantineDocsList() {
-        HashMap<String, Object> caseDataUpdated = new HashMap<>();
         CaseData caseData = CaseData.builder()
             .documentManagementDetails(
                 DocumentManagementDetails.builder()
@@ -361,7 +383,6 @@ public class ReviewDocumentServiceTest {
 
     @Test
     public void testReviewDocumentListIsNotEmptyWhenDocumentArePresentForBulkscanDocuments() {
-        HashMap<String, Object> caseDataUpdated = new HashMap<>();
         CaseData caseData = CaseData.builder()
             .documentManagementDetails(DocumentManagementDetails.builder().build())
             .scannedDocuments(List.of(element(
@@ -384,7 +405,6 @@ public class ReviewDocumentServiceTest {
 
     @Test
     public void testReviewDocumentListIsNotEmptyWhenDocumentArePresentForCourtStaffQuarantineDocsList() {
-        HashMap<String, Object> caseDataUpdated = new HashMap<>();
         CaseData caseData = CaseData.builder()
             .documentManagementDetails(
                 DocumentManagementDetails.builder()
@@ -402,6 +422,27 @@ public class ReviewDocumentServiceTest {
 
         Assert.assertTrue(!reviewDocumentService.fetchDocumentDynamicListElements(caseData).isEmpty());
     }
+
+    @Test
+    public void testReviewDocumentListIsNotEmptyWhenDocumentArePresentForLocalAuthorityQuarantineDocsList() {
+        CaseData caseData = CaseData.builder()
+            .documentManagementDetails(
+                DocumentManagementDetails.builder()
+                    .localAuthorityQuarantineDocsList(List.of(element(QuarantineLegalDoc.builder().uploaderRole("LASOLICITOR")
+                                                                      .documentUploadedDate(LocalDateTime.now())
+                                                                      .document(Document.builder().build())
+                                                                      .courtStaffQuarantineDocument(Document.builder()
+                                                                                                        .documentFileName(
+                                                                                                            "filename")
+                                                                                                        .build())
+                                                                      .build())))
+                    .build()
+            )
+            .citizenUploadedDocumentList(List.of(element(UploadedDocuments.builder().build()))).build();
+
+        Assert.assertTrue(!reviewDocumentService.fetchDocumentDynamicListElements(caseData).isEmpty());
+    }
+
 
     @Test
     public void testReviewDocumentListIsNotEmptyWhenDocumentArePresentForCitizenQuarantineDocsList() {
@@ -455,10 +496,10 @@ public class ReviewDocumentServiceTest {
                                  ).build()).build()).build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
 
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
-        Assert.assertNotNull(caseDataMap.get("reviewDoc"));
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
+        assertNotNull(caseDataMap.get("reviewDoc"));
         Document reviewDoc = (Document) caseDataMap.get("reviewDoc");
         Assert.assertEquals("test.pdf", reviewDoc.getDocumentFileName());
 
@@ -486,21 +527,26 @@ public class ReviewDocumentServiceTest {
                                  ).build()).build()).build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
 
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
-        Assert.assertNotNull(caseDataMap.get("reviewDoc"));
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
+        assertNotNull(caseDataMap.get("reviewDoc"));
         Document reviewDoc = (Document) caseDataMap.get("reviewDoc");
         Assert.assertEquals("test.pdf", reviewDoc.getDocumentFileName());
     }
 
     @Test
     public void testGetDocumentDetailsWhenUploadedByCourtStaffProfessional() {
+        // given
         quarantineLegalDoc = quarantineLegalDoc.toBuilder()
             .courtStaffQuarantineDocument(document)
             .restrictedDetails("test details")
+            .notes("abc")
+            .isConfidential(YesOrNo.Yes)
+            .isRestricted(YesOrNo.Yes)
             .uploaderRole(COURT_STAFF)
             .build();
+
 
         CaseData caseData = CaseData.builder()
             .documentManagementDetails(
@@ -514,11 +560,16 @@ public class ReviewDocumentServiceTest {
                                      DynamicListElement.builder()
                                          .code("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355").build()
                                  ).build()).build()).build();
-
+        DynamicList documentCategories = Instancio.create(DynamicList.class);
+        when(documentCategoryService.retrieveDocumentCategories(AUTHORISATION, caseData, null)).thenReturn(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
-        Assert.assertNotNull(caseDataMap.get("reviewDoc"));
+
+        // when
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
+
+        // then
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
+        assertNotNull(caseDataMap.get("reviewDoc"));
         Document reviewDoc = (Document) caseDataMap.get("reviewDoc");
         Assert.assertEquals("test.pdf", reviewDoc.getDocumentFileName());
     }
@@ -544,8 +595,8 @@ public class ReviewDocumentServiceTest {
             .build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
     }
 
     @Test
@@ -572,8 +623,12 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes).build()).build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
+
+        // when
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
+
+        // then
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
     }
 
     @Ignore
@@ -604,7 +659,7 @@ public class ReviewDocumentServiceTest {
         List<Element<UploadedDocuments>> citizenUploadDocListConfTab =
             (List<Element<UploadedDocuments>>) caseDataMap.get("citizenUploadDocListConfTab");
 
-        Assert.assertNotNull(caseDataMap.get("citizenUploadDocListConfTab"));
+        assertNotNull(caseDataMap.get("citizenUploadDocListConfTab"));
         Assert.assertEquals(1, citizenUploadDocListConfTab.size());
         Assert.assertEquals(
             document.getDocumentFileName(),
@@ -635,7 +690,7 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes).build())
             .citizenUploadedDocumentList(List.of(element(UploadedDocuments.builder().build()))).build();
         ResponseEntity<SubmittedCallbackResponse> response = reviewDocumentService.getReviewResult(caseData);
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Assert.assertEquals(DOCUMENT_SUCCESSFULLY_REVIEWED, response.getBody().getConfirmationHeader());
         Assert.assertEquals(REVIEW_YES, response.getBody().getConfirmationBody());
     }
@@ -663,7 +718,7 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.no).build())
             .citizenUploadedDocumentList(List.of(element(UploadedDocuments.builder().build()))).build();
         ResponseEntity<SubmittedCallbackResponse> response = reviewDocumentService.getReviewResult(caseData);
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Assert.assertEquals(DOCUMENT_SUCCESSFULLY_REVIEWED, response.getBody().getConfirmationHeader());
         Assert.assertEquals(REVIEW_NO, response.getBody().getConfirmationBody());
     }
@@ -693,7 +748,7 @@ public class ReviewDocumentServiceTest {
 
         ResponseEntity<SubmittedCallbackResponse> response = reviewDocumentService.getReviewResult(caseData);
 
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Assert.assertEquals(DOCUMENT_IN_REVIEW, response.getBody().getConfirmationHeader());
         Assert.assertEquals(REVIEW_NOT_SURE, response.getBody().getConfirmationBody());
     }
@@ -720,7 +775,7 @@ public class ReviewDocumentServiceTest {
         when(allTabServiceImpl.getStartUpdateForSpecificEvent(anyString(), anyString()))
             .thenReturn(startAllTabsUpdateDataContent);
         ResponseEntity<SubmittedCallbackResponse> response = reviewDocumentService.getReviewResult(caseData);
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Assert.assertEquals(DOCUMENT_IN_REVIEW, response.getBody().getConfirmationHeader());
         Assert.assertEquals(REVIEW_NOT_SURE, response.getBody().getConfirmationBody());
     }
@@ -741,7 +796,7 @@ public class ReviewDocumentServiceTest {
                                            .citizenQuarantineDocsList(new ArrayList<>())
                                            .build()).build();
         ResponseEntity<SubmittedCallbackResponse> response = reviewDocumentService.getReviewResult(caseData);
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Assert.assertEquals(DOCUMENT_IN_REVIEW, response.getBody().getConfirmationHeader());
         Assert.assertEquals(REVIEW_NOT_SURE, response.getBody().getConfirmationBody());
     }
@@ -767,7 +822,7 @@ public class ReviewDocumentServiceTest {
         when(allTabServiceImpl.getStartUpdateForSpecificEvent(anyString(), anyString()))
             .thenReturn(startAllTabsUpdateDataContent);
         ResponseEntity<SubmittedCallbackResponse> response = reviewDocumentService.getReviewResult(caseData);
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Assert.assertEquals(DOCUMENT_SUCCESSFULLY_REVIEWED, response.getBody().getConfirmationHeader());
         Assert.assertEquals(REVIEW_YES, response.getBody().getConfirmationBody());
     }
@@ -801,6 +856,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.no)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
             .thenReturn(bulkScanQuarantineDoc);
@@ -810,18 +869,18 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get("bulkScannedDocListDocTab"));
+        assertNotNull(caseDataMap.get("bulkScannedDocListDocTab"));
         Assert.assertTrue(caseData.getScannedDocuments().isEmpty());
 
         List<Element<QuarantineLegalDoc>> bulkScannedDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("bulkScannedDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("bulkScannedDocListDocTab"));
+        assertNotNull(caseDataMap.get("bulkScannedDocListDocTab"));
         Assert.assertEquals(1, bulkScannedDocListDocTab.size());
-        Assert.assertNotNull(bulkScannedDocListDocTab.get(0).getValue().getUrl());
-        Assert.assertNull(bulkScannedDocListDocTab.get(0).getValue().getCategoryId());
-        Assert.assertEquals("123", bulkScannedDocListDocTab.get(0).getValue().getControlNumber());
-        Assert.assertEquals("EXREF", bulkScannedDocListDocTab.get(0).getValue().getExceptionRecordReference());
+        assertNotNull(bulkScannedDocListDocTab.getFirst().getValue().getUrl());
+        Assert.assertEquals(quarantineLegalDoc.getCategoryId(), bulkScannedDocListDocTab.getFirst().getValue().getCategoryId());
+        Assert.assertEquals("123", bulkScannedDocListDocTab.getFirst().getValue().getControlNumber());
+        Assert.assertEquals("EXREF", bulkScannedDocListDocTab.getFirst().getValue().getExceptionRecordReference());
     }
 
     @Test
@@ -861,10 +920,10 @@ public class ReviewDocumentServiceTest {
 
         Assert.assertTrue(caseData.getScannedDocuments().isEmpty());
 
-        Assert.assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+        assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> confidentialDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(CONFIDENTIAL_DOCUMENTS);
-        Assert.assertNotNull(confidentialDocs.get(0).getValue().getUrl());
+        assertNotNull(confidentialDocs.get(0).getValue().getUrl());
         Assert.assertNull(confidentialDocs.get(0).getValue().getCategoryId());
         Assert.assertEquals("123", confidentialDocs.get(0).getValue().getControlNumber());
         Assert.assertEquals("EXREF", confidentialDocs.get(0).getValue().getExceptionRecordReference());
@@ -894,6 +953,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -906,10 +969,10 @@ public class ReviewDocumentServiceTest {
         );
 
 
-        Assert.assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+        assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(CONFIDENTIAL_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.No, restrictedDocs.get(0).getValue().getIsRestricted());
     }
@@ -942,16 +1005,23 @@ public class ReviewDocumentServiceTest {
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
             .thenReturn(quarantineConfidentialDoc);
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
+
+
+
         reviewDocumentService.processReviewDocument(
             caseDataMap,
             caseData,
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(RESTRICTED_DOCUMENTS));
+        assertNotNull(caseDataMap.get(RESTRICTED_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(RESTRICTED_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsRestricted());
     }
@@ -970,6 +1040,10 @@ public class ReviewDocumentServiceTest {
             .reviewDocuments(ReviewDocuments.builder()
                                  .reviewDecisionYesOrNo(YesNoNotSure.no)
                                  .legalProfUploadDocListDocTab(new ArrayList<>()).build()).build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -980,12 +1054,12 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
+        assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
 
         List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("legalProfUploadDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("legalProfUploadDocListDocTab"));
+        assertNotNull(caseDataMap.get("legalProfUploadDocListDocTab"));
         Assert.assertEquals(1, legalProfUploadDocListDocTab.size());
         Assert.assertEquals(
             "test.pdf",
@@ -1021,6 +1095,10 @@ public class ReviewDocumentServiceTest {
                 .reviewDocuments(ReviewDocuments.builder()
                                      .reviewDecisionYesOrNo(YesNoNotSure.no)
                                      .legalProfUploadDocListDocTab(new ArrayList<>()).build()).build();
+            DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+                .label(quarantineLegalDoc.getCategoryName()).build();
+            DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+            caseData.getReviewDocuments().setDocumentCategories(documentCategories);
             Map<String, Object> caseDataMap = new HashMap<>();
 
             doNothing().when(emailService).send(anyString(), any(), any(), any());
@@ -1032,12 +1110,12 @@ public class ReviewDocumentServiceTest {
                 UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
             );
 
-            Assert.assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
+            assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
 
             List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTab =
                 (List<Element<QuarantineLegalDoc>>) caseDataMap.get("legalProfUploadDocListDocTab");
 
-            Assert.assertNotNull(caseDataMap.get("legalProfUploadDocListDocTab"));
+            assertNotNull(caseDataMap.get("legalProfUploadDocListDocTab"));
             Assert.assertEquals(1, legalProfUploadDocListDocTab.size());
             Assert.assertEquals(
                 "test.pdf",
@@ -1074,6 +1152,10 @@ public class ReviewDocumentServiceTest {
                 .reviewDocuments(ReviewDocuments.builder()
                                      .reviewDecisionYesOrNo(YesNoNotSure.no)
                                      .legalProfUploadDocListDocTab(new ArrayList<>()).build()).build();
+            DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+                .label(quarantineLegalDoc.getCategoryName()).build();
+            DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+            caseData.getReviewDocuments().setDocumentCategories(documentCategories);
             Map<String, Object> caseDataMap = new HashMap<>();
 
             doNothing().when(emailService).send(anyString(), any(), any(), any());
@@ -1085,12 +1167,12 @@ public class ReviewDocumentServiceTest {
                 UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
             );
 
-            Assert.assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
+            assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
 
             List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab =
                 (List<Element<QuarantineLegalDoc>>) caseDataMap.get("citizenUploadedDocListDocTab");
 
-            Assert.assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
+            assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
             Assert.assertEquals(1, citizenUploadedDocListDocTab.size());
             Assert.assertEquals(
                 "test.pdf",
@@ -1126,6 +1208,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -1137,10 +1223,10 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+        assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(CONFIDENTIAL_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.No, restrictedDocs.get(0).getValue().getIsRestricted());
 
@@ -1170,6 +1256,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -1180,10 +1270,10 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(RESTRICTED_DOCUMENTS));
+        assertNotNull(caseDataMap.get(RESTRICTED_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(RESTRICTED_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsRestricted());
     }
@@ -1200,6 +1290,10 @@ public class ReviewDocumentServiceTest {
             .reviewDocuments(ReviewDocuments.builder()
                                  .reviewDecisionYesOrNo(YesNoNotSure.no)
                                  .courtStaffUploadDocListDocTab(new ArrayList<>()).build()).build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
             .thenReturn(quarantineCaseDoc);
@@ -1212,7 +1306,7 @@ public class ReviewDocumentServiceTest {
         List<Element<QuarantineLegalDoc>> courtStaffUploadDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("courtStaffUploadDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("courtStaffUploadDocListDocTab"));
+        assertNotNull(caseDataMap.get("courtStaffUploadDocListDocTab"));
         Assert.assertEquals(1, courtStaffUploadDocListDocTab.size());
         Assert.assertEquals(
             "test.pdf",
@@ -1244,6 +1338,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -1255,10 +1353,10 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+        assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(CONFIDENTIAL_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.No, restrictedDocs.get(0).getValue().getIsRestricted());
 
@@ -1288,6 +1386,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -1298,10 +1400,10 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(RESTRICTED_DOCUMENTS));
+        assertNotNull(caseDataMap.get(RESTRICTED_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(RESTRICTED_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsRestricted());
     }
@@ -1324,6 +1426,12 @@ public class ReviewDocumentServiceTest {
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
             .thenReturn(quarantineCaseDoc);
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
+
+
         reviewDocumentService.processReviewDocument(
             caseDataMap,
             caseData,
@@ -1333,13 +1441,67 @@ public class ReviewDocumentServiceTest {
         List<Element<QuarantineLegalDoc>> cafcassUploadDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("cafcassUploadDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("cafcassUploadDocListDocTab"));
+        assertNotNull(caseDataMap.get("cafcassUploadDocListDocTab"));
         Assert.assertEquals(1, cafcassUploadDocListDocTab.size());
         Assert.assertEquals(
             "test.pdf",
             cafcassUploadDocListDocTab.get(0).getValue().getMiamCertificateDocument().getDocumentFileName()
         );
         Assert.assertEquals("MIAMCertificate", cafcassUploadDocListDocTab.get(0).getValue().getCategoryId());
+    }
+
+    @Test
+    public void testReviewProcessForAlwaysConfidentialCafcassDocTypesHaveConfidentialPrefixWhenDecisionNo() {
+        doCallRealMethod().when(manageDocumentsService).renameAndReuploadFileToBeConfidential(any());
+        when(objectMapper.convertValue((Object) any(), (Class<Object>) any())).thenReturn(quarantineCaseDoc);
+
+        // Category IDs used by the new categoryId-based check in ManageDocumentsService
+        List<String> cafcassCategoryIds = List.of(DOC_TYPE_CIR_TRANSFER, DOC_TYPE_CIR_EXTENSION, SIXTEEN_A_RISK_ASSESSMENT);
+        for (String categoryId : cafcassCategoryIds) {
+            Mockito.clearInvocations(manageDocumentsService);
+
+            List<Element<QuarantineLegalDoc>> quarantineDocsList = new ArrayList<>();
+            QuarantineLegalDoc cafcassAlwaysConfidentialDoc = QuarantineLegalDoc.builder()
+                .documentParty(DocumentPartyEnum.CAFCASS.getDisplayedValue())
+                .categoryId(categoryId)
+                .uploaderRole(CAFCASS)
+                .cafcassQuarantineDocument(document)
+                .isConfidential(YesOrNo.Yes)
+                .documentUploadedDate(LocalDateTime.now())
+                .build();
+            quarantineDocsList.add(element(
+                UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355"),
+                cafcassAlwaysConfidentialDoc
+            ));
+
+            CaseData caseData = CaseData.builder()
+                .documentManagementDetails(DocumentManagementDetails.builder()
+                                               .cafcassQuarantineDocsList(quarantineDocsList)
+                                               .build())
+                .reviewDocuments(ReviewDocuments.builder()
+                                     .reviewDecisionYesOrNo(YesNoNotSure.no)
+                                     .cafcassUploadDocListDocTab(new ArrayList<>())
+                                     .build())
+                .build();
+            DynamicListElement dynamicListElement = DynamicListElement.builder().code(cafcassAlwaysConfidentialDoc.getCategoryId())
+                .label(cafcassAlwaysConfidentialDoc.getCategoryName()).build();
+            DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+            caseData.getReviewDocuments().setDocumentCategories(documentCategories);
+            Map<String, Object> caseDataMap = new HashMap<>();
+
+            reviewDocumentService.processReviewDocument(
+                caseDataMap,
+                caseData,
+                UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
+            );
+
+            // Document still will stay back as confidential
+            Assert.assertNull(caseDataMap.get("cafcassUploadDocListDocTab"));
+            assertNotNull("Category " + categoryId + " should NOT go to confidential tab", caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+
+            // Verify rename was invoked once per doc type
+            verify(manageDocumentsService, times(1)).renameAndReuploadFileToBeConfidential(document);
+        }
     }
 
     @Test
@@ -1394,8 +1556,8 @@ public class ReviewDocumentServiceTest {
             .build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
     }
 
     @Test
@@ -1420,7 +1582,10 @@ public class ReviewDocumentServiceTest {
                                  .build())
             .build();
         Map<String, Object> caseDataMap = new HashMap<>();
-
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
             .thenReturn(quarantineConfidentialDoc);
 
@@ -1430,10 +1595,10 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+        assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(CONFIDENTIAL_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.No, restrictedDocs.get(0).getValue().getIsRestricted());
     }
@@ -1482,6 +1647,10 @@ public class ReviewDocumentServiceTest {
             .reviewDocuments(ReviewDocuments.builder()
                                  .reviewDecisionYesOrNo(YesNoNotSure.no)
                                  .legalProfUploadDocListDocTab(new ArrayList<>()).build()).build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
         reviewDocumentService.processReviewDocument(
             caseDataMap,
@@ -1489,12 +1658,12 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
+        assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
 
         List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("citizenUploadedDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
+        assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
         Assert.assertEquals(1, citizenUploadedDocListDocTab.size());
         Assert.assertEquals(
             "test.pdf",
@@ -1548,19 +1717,25 @@ public class ReviewDocumentServiceTest {
             .reviewDocuments(ReviewDocuments.builder()
                                  .reviewDecisionYesOrNo(YesNoNotSure.no)
                                  .legalProfUploadDocListDocTab(new ArrayList<>()).build()).build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
+
+
         reviewDocumentService.processReviewDocument(
             caseDataMap,
             caseData,
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
+        assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
 
         List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("citizenUploadedDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
+        assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
         Assert.assertEquals(1, citizenUploadedDocListDocTab.size());
         Assert.assertEquals(
             "test.pdf",
@@ -1591,6 +1766,10 @@ public class ReviewDocumentServiceTest {
                                  .reviewDecisionYesOrNo(YesNoNotSure.yes)
                                  .build())
             .build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
 
         when(objectMapper.convertValue((Object) any(), (Class<Object>) any()))
@@ -1602,10 +1781,10 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
+        assertNotNull(caseDataMap.get(CONFIDENTIAL_DOCUMENTS));
         List<Element<QuarantineLegalDoc>> restrictedDocs =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get(CONFIDENTIAL_DOCUMENTS);
-        Assert.assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
+        assertNotNull(restrictedDocs.get(0).getValue().getMiamCertificateDocument());
         Assert.assertEquals(YesOrNo.Yes, restrictedDocs.get(0).getValue().getIsConfidential());
         Assert.assertEquals(YesOrNo.No, restrictedDocs.get(0).getValue().getIsRestricted());
 
@@ -1670,6 +1849,10 @@ public class ReviewDocumentServiceTest {
             .reviewDocuments(ReviewDocuments.builder()
                                  .reviewDecisionYesOrNo(YesNoNotSure.no)
                                  .legalProfUploadDocListDocTab(new ArrayList<>()).build()).build();
+        DynamicListElement dynamicListElement = DynamicListElement.builder().code(quarantineLegalDoc.getCategoryId())
+            .label(quarantineLegalDoc.getCategoryName()).build();
+        DynamicList documentCategories = DynamicList.builder().value(dynamicListElement).build();
+        caseData.getReviewDocuments().setDocumentCategories(documentCategories);
         Map<String, Object> caseDataMap = new HashMap<>();
         reviewDocumentService.processReviewDocument(
             caseDataMap,
@@ -1677,12 +1860,12 @@ public class ReviewDocumentServiceTest {
             UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355")
         );
 
-        Assert.assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
+        assertNotNull(caseData.getReviewDocuments().getLegalProfUploadDocListDocTab());
 
         List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab =
             (List<Element<QuarantineLegalDoc>>) caseDataMap.get("citizenUploadedDocListDocTab");
 
-        Assert.assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
+        assertNotNull(caseDataMap.get("citizenUploadedDocListDocTab"));
         Assert.assertEquals(1, citizenUploadedDocListDocTab.size());
         Assert.assertEquals(
             "test.pdf",
@@ -1722,8 +1905,8 @@ public class ReviewDocumentServiceTest {
             .build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
     }
 
     @Test
@@ -1749,10 +1932,10 @@ public class ReviewDocumentServiceTest {
                                  ).build()).build()).build();
 
         Map<String, Object> caseDataMap = new HashMap<>();
-        reviewDocumentService.getReviewedDocumentDetailsNew(caseData, caseDataMap);
+        reviewDocumentService.getReviewedDocumentDetailsNew(AUTHORISATION, caseData, caseDataMap);
 
-        Assert.assertNotNull(caseDataMap.get("docToBeReviewed"));
-        Assert.assertNotNull(caseDataMap.get("reviewDoc"));
+        assertNotNull(caseDataMap.get("docToBeReviewed"));
+        assertNotNull(caseDataMap.get("reviewDoc"));
         Document reviewDoc = (Document) caseDataMap.get("reviewDoc");
         Assert.assertEquals("test.pdf", reviewDoc.getDocumentFileName());
     }
@@ -1850,4 +2033,46 @@ public class ReviewDocumentServiceTest {
 
         verifyNoInteractions(manageDocumentsService);
     }
+
+
+    @Test
+    public void testTriggerAllDocsReviewedEvent() {
+        // given
+        CaseData caseData = Instancio.create(CaseData.class);
+        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = Instancio.create(StartAllTabsUpdateDataContent.class);
+        DocumentManagementDetails documentManagementDetails = caseData.getDocumentManagementDetails();
+        documentManagementDetails.setLegalProfQuarantineDocsList(new ArrayList<>());
+        documentManagementDetails.setCourtStaffQuarantineDocsList(new ArrayList<>());
+        documentManagementDetails.setCitizenQuarantineDocsList(new ArrayList<>());
+        documentManagementDetails.setLocalAuthorityQuarantineDocsList(new ArrayList<>());
+        documentManagementDetails.setCafcassQuarantineDocsList(new ArrayList<>());
+        documentManagementDetails.setCourtNavQuarantineDocumentList(new ArrayList<>());
+        caseData.setScannedDocuments(new ArrayList<>());
+        when(allTabServiceImpl.getStartUpdateForSpecificEvent(anyString(), anyString())).thenReturn(startAllTabsUpdateDataContent);
+
+
+        // when
+        reviewDocumentService.triggerAllDocsReviewedEvent(caseData);
+
+        // then
+        verify(allTabServiceImpl).getStartUpdateForSpecificEvent(anyString(), anyString());
+        verify(allTabServiceImpl).submitAllTabsUpdate(anyString(), anyString(), any(StartEventResponse.class), any(
+            EventRequestData.class), any(Map.class));
+    }
+
+
+    @Test
+    public void testRemoveReviewDocumentWithMissingDocument() {
+        // given
+        CaseData caseData = Instancio.create(CaseData.class);
+        Map<String, Object> caseDataUpdated = new HashMap<>();
+
+        // when
+        reviewDocumentService.removeReviewDocumentWithMissingDocument(caseData, caseDataUpdated);
+
+        // then
+        assertNotNull(caseDataUpdated);
+    }
+
+
 }
